feat(blockchain) VelodromeLiquidityManager contract for Velodrome Integrations and tests

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -8,6 +8,5 @@ remappings = [
     "@openzeppelin/=lib/openzeppelin-contracts/",
 ]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
-
-unknown_chain = { key = "${TENDERLY_ACCESS_KEY}", chain = 76222, url = "${VERIFIER_URL}" }
+[rpc_endpoints]
+lisk = "https://lisk.drpc.org"
