--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Save to Earn Platform in Lisk",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "npx jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "vt-tenderly": "node contracts/vt-tenderly.js",
+    "vt-foundry": "sh contracts/foundry.sh"
   },
   "keywords": [
     "save",
@@ -15,6 +18,7 @@
   "author": "Vaquita-Fi",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "ethers": "^6.14.4"
   }
 }
