--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,10 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 via_ir = true
-
-remappings = [
-    "@openzeppelin/=lib/openzeppelin-contracts/",
-]
+solc_version = "0.8.25"
+auto_detect_remappings = false
 
 [rpc_endpoints]
 lisk = "https://lisk.drpc.org"
